<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/config_detail_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.MoveConfigDetailActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/config_detail_value_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_empty_value"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/config_detail_key_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/move_config_from"/>
        </LinearLayout>

        <ImageButton
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/move_config_edit_from"
            android:minWidth="64dp"
            android:onClick="onFromEditClicked"
            android:src="@drawable/ic_edit"
            android:tint="@color/colorPrimary"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:alpha="0.12"
        android:background="@android:color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/config_detail_value_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_empty_value"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/config_detail_key_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/move_config_to"/>
        </LinearLayout>

        <ImageButton
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/move_config_edit_to"
            android:minWidth="64dp"
            android:onClick="onToEditClicked"
            android:src="@drawable/ic_edit"
            android:tint="@color/colorPrimary"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:alpha="0.12"
        android:background="@android:color/black"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/config_detail_value_extensions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_empty_value"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/config_detail_key_extensions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/move_config_file_extensions"/>
        </LinearLayout>

        <ImageButton
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/move_config_edit_file_extensions"
            android:minWidth="64dp"
            android:onClick="onExtensionsEditClicked"
            android:src="@drawable/ic_edit"
            android:tint="@color/colorPrimary"/>
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:alpha="0.12"
        android:background="@android:color/black"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/config_detail_key_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/move_config_mode"/>
    </LinearLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/config_detail_value_copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/move_config_mode_copy"/>

        <RadioButton
            android:id="@+id/config_detail_value_move"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/move_config_mode_move"/>
    </RadioGroup>

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onSaveClicked"
        android:text="@string/move_config_save"/>
</LinearLayout>